@@ -137,6 +137,21 @@ name|common
 operator|.
 name|params
 operator|.
+name|CursorMarkParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|GroupParams
 import|;
 end_import
@@ -3938,6 +3953,266 @@ name|size
 argument_list|()
 operator|==
 literal|2
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testWithCursorMark
+specifier|public
+name|void
+name|testWithCursorMark
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrCore
+name|core
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+decl_stmt|;
+name|SearchComponent
+name|speller
+init|=
+name|core
+operator|.
+name|getSearchComponent
+argument_list|(
+literal|"spellcheck"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"speller is null and it shouldn't be"
+argument_list|,
+name|speller
+operator|!=
+literal|null
+argument_list|)
+expr_stmt|;
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_BUILD
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_COUNT
+argument_list|,
+literal|"10"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_COLLATE
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_MAX_COLLATION_TRIES
+argument_list|,
+literal|"2"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_MAX_COLLATIONS
+argument_list|,
+literal|"1"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CommonParams
+operator|.
+name|Q
+argument_list|,
+literal|"lowerfilt:(+fauth)"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CommonParams
+operator|.
+name|SORT
+argument_list|,
+literal|"id asc"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CursorMarkParams
+operator|.
+name|CURSOR_MARK_PARAM
+argument_list|,
+name|CursorMarkParams
+operator|.
+name|CURSOR_MARK_START
+argument_list|)
+expr_stmt|;
+name|SolrRequestHandler
+name|handler
+init|=
+name|core
+operator|.
+name|getRequestHandler
+argument_list|(
+literal|"spellCheckCompRH"
+argument_list|)
+decl_stmt|;
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|rsp
+operator|.
+name|addResponseHeader
+argument_list|(
+operator|new
+name|SimpleOrderedMap
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|SolrQueryRequest
+name|req
+init|=
+operator|new
+name|LocalSolrQueryRequest
+argument_list|(
+name|core
+argument_list|,
+name|params
+argument_list|)
+decl_stmt|;
+name|handler
+operator|.
+name|handleRequest
+argument_list|(
+name|req
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|NamedList
+name|values
+init|=
+name|rsp
+operator|.
+name|getValues
+argument_list|()
+decl_stmt|;
+name|NamedList
+name|spellCheck
+init|=
+operator|(
+name|NamedList
+operator|)
+name|values
+operator|.
+name|get
+argument_list|(
+literal|"spellcheck"
+argument_list|)
+decl_stmt|;
+name|NamedList
+name|collationList
+init|=
+operator|(
+name|NamedList
+operator|)
+name|spellCheck
+operator|.
+name|get
+argument_list|(
+literal|"collations"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|?
+argument_list|>
+name|collations
+init|=
+operator|(
+name|List
+argument_list|<
+name|?
+argument_list|>
+operator|)
+name|collationList
+operator|.
+name|getAll
+argument_list|(
+literal|"collation"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|collations
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
